# youmubot

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  module.nix  package.nix
.github/workflows/: build_test.yml  deploy.yml
.sqlx/: query-1619aac8983ad68177bd698393b24eefd77bada44bec1043972493146c09bb73.json  query-1bf34dddbe994d6124c9382c75e70e1347329e945de2eefad4bfcab5f81b73ce.json  query-235312a1aad1a58c2f7f2d817945bbac57c38ad2c51c1924683d13d045f21ad9.json  query-25077e7b2657eb918fa49acc16ceba14a004ed503c174073a1db184d902ee393.json  query-25dcc59341e6375ee6a55aa014aecc54be42e1e8787ae5a06a61bb8ba8e9c366.json  query-296c95c7ead4d747a4da007b4b6e28d3c6c1c4bb654c82cc40bf61390c3dad4b.json  query-4b033607229deba540f80e469753e2125b6d8134346144f462325dc025221044.json  query-5210e3e5610bb968b0b11411b99956d1bf358f2c1e35c4eb5730388ce0c2fe09.json  query-54f54f669244fbdf1ad68664290d8f32f0bda74ceee62d10c84ac03b710c828c.json  query-6125c1c187029c7ac6e1e9519445e49942ddf6068a16f000dd0750ab8a9d52c2.json  query-6bfd02cb36c9b74ed4c69eb694e936ba2ee8d3864e2a43b43db78afc32a47384.json  query-8b9ad43442b7fa520f2eae498d2ee08264810e49c28bd8ddffaa9f444cada1b5.json  query-95541f737a8dfc7f440840617bed87ebde6dabdd70e2ba7b110ebec91e7feda7.json  query-9c620436cfe463780fca2dc5497c3b787fa284a74b3e3d491755c88a693810e0.json  query-a247c7a73bdbf1042fdd8363da1f6b51e283c83b1ba7fa17e5cb056b220f7889.json  query-b9c63ef764711088cfbb58ce2ed1f46e3521357ec1d7c062bef762d3e4267378.json  query-d2c0856276174653a9dd428a2f89e7841b2083ee4b18ea83eedcd46bc4356599.json  query-d7c91077f904543740a12185fac7756346aa50a63b911414ee8f7a4a0d6dd1cc.json  query-db5960586bc418d2a6a31c18b4a63f4efcfe4685c0561e07a2c954538be4789b.json  query-dbb948ade9139445faf17c1c6bece242a241d3499a6b973ecf5f6c6588b077ad.json  query-e313b2e91d0da80a94e9a1030f94cf30b025c9ac0ac4d5bcc12656459c5e083a.json  query-e5da2c27e9d61239ebd9de291e08de8333d3097ada82da790942f05acdd87fc3.json  query-f356ab7ef8b7c320d29ad9cce03f66defcfbe67a7c4ccac16dd41508bc2d829d.json
scripts/: get_osu_api_token.fish
youmubot/: Cargo.toml
youmubot-cf/: Cargo.toml
youmubot-cf/src/: announcer.rs  db.rs  embed.rs  hook.rs  lib.rs  live.rs
youmubot-core/: Cargo.toml
youmubot-core/src/: db.rs  lib.rs
youmubot-core/src/admin/: ignore.rs  mod.rs  soft_ban.rs
youmubot-core/src/community/: mod.rs  roles.rs  votes.rs
youmubot-core/src/fun/: images.rs  mod.rs  names.rs
youmubot-db/: Cargo.toml
youmubot-db-sql/: Cargo.toml  sqlx-data.json
youmubot-db-sql/.sqlx/: query-08f2568a69a14ae240a24264238d4abc7aea5eee67d6062d049f0d37031e4d7a.json  query-246e26a34c042872a77f53a84d62da31db069cced20e3b0f96a40c3c7dd99783.json  query-26a910506c0613936be169df13320dfd7f9d3df62a35ba63c61efc5de70e750d.json  query-296c95c7ead4d747a4da007b4b6e28d3c6c1c4bb654c82cc40bf61390c3dad4b.json  query-5753fe315c9a55154d2d80e6d293dc8abffcf426b845624a42cd0bfefc75fb74.json  query-6ef67ca385287a4cef9fdd47bf4258ec9de4802d90dbb2ab48de32c1a4ada601.json  query-700ec95294d9a4f21e3d7ff53f15f5dc739bffe8fedc19e35cbb576b6dd2e948.json  query-95541f737a8dfc7f440840617bed87ebde6dabdd70e2ba7b110ebec91e7feda7.json  query-9b7788f4d7144fe00f4bc9004c88dc8562ff3d7a931fc3f1dc039cc55fe3195a.json  query-9c620436cfe463780fca2dc5497c3b787fa284a74b3e3d491755c88a693810e0.json  query-a06efa1b12c2c7c9cf5b83bff796c0e59d61596cb609c4bb952edc2d64cec868.json  query-a5d8dccaaf80b2673c5c0e689c01a90861788ca84221baaaf19cd159ed3062c9.json  query-aa6db751abe51922548d6c040d40ef57cae1cf6338523fd2b801b482164d54fa.json  query-ae7f57eb92e0bec8439e682ab3ca10732991ffe803d05b09e908ecb4a74c0566.json  query-b098282e73cc6fd435330f6ecd446b1a1cd2aeb89517b7ee09e7e6f8d6e0cd79.json  query-c83421661626cffd81d5590035ae5283a5b0e8a03696ae479b3d275b81b8af83.json  query-d2c0856276174653a9dd428a2f89e7841b2083ee4b18ea83eedcd46bc4356599.json  query-d428568e88b653317cbe2c5336e6cdee0862df09faaa6c1fa09869d79438e427.json  query-d7c91077f904543740a12185fac7756346aa50a63b911414ee8f7a4a0d6dd1cc.json  query-df0aa5065268e59c68990ab46ab4a90ec3137398e83b3d0c626209306804399a.json  query-e17f70eb4375790907c7ecec1132cab859a7a18a8ce636f0b39c0b5387d9dffc.json
youmubot-db-sql/migrations/: 20210329111010_osu_users.sql  20210331094454_more_osu.sql  20240204214751_add_username_to_osu_users.sql  20240305211858_osu_add_weighted_map_length.sql  20240724031746_move_osu_mode_data_to_own_tables.sql  20241030144136_add_preferred_mode_to_osu_users.sql  20250220161301_make_last_beatmap_mode_nullable.sql  20250327105109_ignored_users.sql
youmubot-db-sql/src/: lib.rs
youmubot-db-sql/src/models/: ignore_list.rs  mod.rs  osu.rs  osu_user.rs
youmubot-db/src/: lib.rs
youmubot-osu/: Cargo.toml
youmubot-osu/src/: lib.rs  request.rs  test.rs
youmubot-osu/src/discord/: announcer.rs  app_commands.rs  args.rs  beatmap_cache.rs  cache.rs  commands.rs  db.rs  display.rs  embeds.rs  hook.rs  interaction.rs  link_parser.rs  mod.rs  oppai_cache.rs  register_user.rs  server_rank.rs
youmubot-osu/src/models/: deser.rs  mod.rs  mods.rs  parse.rs  raw.rs  rosu.rs
youmubot-osu/src/request/: mod.rs  scores.rs
youmubot-prelude/: Cargo.toml
youmubot-prelude/src/: announcer.rs  args.rs  editable.rs  flags.rs  hook.rs  interaction_collector.rs  lib.rs  member_cache.rs  pagination.rs  ratelimit.rs  reaction_watch.rs  replyable.rs  setup.rs  table_format.rs
youmubot/src/: compose_framework.rs  db.rs  http.rs  main.rs  prelude.rs
youmubot/src/commands/: admin.rs  announcer.rs  args.rs  mod.rs
youmubot/src/commands/admin/: mod.rs  soft_ban.rs
youmubot/src/commands/community/: mod.rs  votes.rs
youmubot/src/commands/fun/: images.rs  mod.rs  names.rs  votes.rs
youmubot/src/commands/osu/: announcer.rs  cache.rs  embeds.rs  hook.rs  mod.rs
youmubot/src/db/: mod.rs
