[package]
name = "youmubot-cf"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["time"] }
reqwest = "0.10.1"
serenity = "0.9.0-rc.0"
Inflector = "0.11"
codeforces = "0.2.1"
regex = "1"
lazy_static = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "3.11.4"

youmubot-prelude = { path = "../youmubot-prelude" }
youmubot-db = { path = "../youmubot-db" }
