[package]
name = "youmubot-core"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", features = ["collector"] }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
chrono = "0.4.19"
static_assertions = "1.1.0"
futures-util = "0.3.21"
tokio = { version = "1.19.2", features = ["time"] }
flume = "0.10.13"
dashmap = "5.3.4"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }

youmubot-db = { path = "../youmubot-db" }
youmubot-db-sql = { path = "../youmubot-db-sql" }
youmubot-prelude = { path = "../youmubot-prelude" }
