[package]
name = "youmubot-db-sql"
version = "0.1.0"
authors = ["Natsu Kagami <nki@nkagami.me>"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "1.0.31"
chrono = "0.4.19"
futures-util = "0.3.21"
either = "1.6.1"
