[package]
name = "youmubot-osu"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
chrono = "0.4.19"
dashmap = "5.3.4"
lazy_static = "1.4.0"
osuparse = { git = "https://github.com/eltrufas/osuparse", rev = "ad8f6e5e7771e7cbaa2ec96c376558f9731139af" }
regex = "1.5.6"
reqwest = "0.11.10"
rosu-pp = "0.9.1"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", rev = "bab40491023b4c08f64cb1660e8d0e11db4e3c90" }
time = "0.3"
serde = { version = "1.0.137", features = ["derive"] }
serenity = "0.12"
zip = "0.6.2"
rand = "0.8"
futures-util = "0.3.30"

youmubot-db = { path = "../youmubot-db" }
youmubot-db-sql = { path = "../youmubot-db-sql" }
youmubot-prelude = { path = "../youmubot-prelude" }

[dev-dependencies]
serde_json = "1.0.81"
