[package]
name = "youmubot-osu"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
chrono = "0.4.19"
dashmap = "5.3.4"
lazy_static = "1.4.0"
regex = "1.5.6"
reqwest = "0.11.10"
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "pp-update" }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer" }
rosu-map = "0.1"
time = "0.3"
serde = { version = "1.0.137", features = ["derive"] }
serenity = "0.12"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
zip = "0.6.2"
rand = "0.8"
futures = "0.3"
futures-util = "0.3"
thiserror = "2"
flume = "0.10"
leaky-bucket = "1.1"

youmubot-db = { path = "../youmubot-db" }
youmubot-db-sql = { path = "../youmubot-db-sql" }
youmubot-prelude = { path = "../youmubot-prelude" }

[dev-dependencies]
serde_json = "1.0.81"
