[package]
name = "youmubot-prelude"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
youmubot-db = { path = "../youmubot-db" }
youmubot-db-sql = { path = "../youmubot-db-sql" }
reqwest = "0.11"
chrono = "0.4"
flume = "0.10"
dashmap = "4"

[dependencies.serenity]
version = "0.10"
default-features = true
features = ["collector"]
