[package]
name = "youmubot-prelude"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
futures-util = "0.3.21"
tokio = { version = "1.19.2", features = ["time"] }
youmubot-db = { path = "../youmubot-db" }
youmubot-db-sql = { path = "../youmubot-db-sql" }
reqwest = { version = "0.11.10", features = ["json"] }
chrono = "0.4.19"
flume = "0.10.13"
dashmap = "5.3.4"
poise = "0.6"

[dependencies.serenity]
version = "0.12"
default-features = true
features = ["collector"]
