[package]
name = "youmubot"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["core", "osu"] # codeforces disabled for now
core = []
osu = ["youmubot-osu"]
codeforces = ["youmubot-cf"]

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
dotenv = "0.15"
env_logger = "0.7"
youmubot-db = { path = "../youmubot-db" }
youmubot-prelude = { path = "../youmubot-prelude" }
youmubot-core = { path = "../youmubot-core" }
youmubot-osu = { path = "../youmubot-osu", optional = true }
youmubot-cf = { path = "../youmubot-cf", optional = true }

