[package]
name = "youmubot"
version = "0.1.0"
authors = ["Natsu Kagami <natsukagami@gmail.com>"]
edition = "2021"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["core", "codeforces", "osu"]
core = []
osu = ["youmubot-osu"]
codeforces = ["youmubot-cf"]

[dependencies]
serenity = "0.12"
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
youmubot-db = { path = "../youmubot-db" }
youmubot-prelude = { path = "../youmubot-prelude" }
youmubot-core = { path = "../youmubot-core" }
youmubot-osu = { path = "../youmubot-osu", optional = true }
youmubot-cf = { path = "../youmubot-cf", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

